--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cupertino_icons: ^1.0.2
-  equatable: ^2.0.5
-  firebase_auth: ^4.15.0
-  firebase_core: ^2.23.0
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.2
+  
+  # Firebase
+  firebase_auth: ^4.15.0
+  firebase_core: ^2.23.0
+
+  # BloC
   flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
 
   user_repository:
     path: packages/user_repository
@@ -53,8 +57,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
