--- a/packages/user_repository/pubspec.yaml
+++ b/packages/user_repository/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   firebase_auth: ^4.14.1
+  firebase_core: ^2.24.2
+  firebase_storage: ^11.5.5
   flutter:
     sdk: flutter
 
