--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
 
+  image_cropper: ^5.0.1
+  image_picker: ^1.0.4
+
+  curved_navigation_bar: ^1.0.3
+
   user_repository:
     path: packages/user_repository
 
