--- a/packages/reservation_repository/pubspec.yaml
+++ b/packages/reservation_repository/pubspec.yaml
@@ -8,8 +8,13 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^4.13.2
+  uuid: ^4.0.0
   flutter:
     sdk: flutter
+
+  user_repository:
+    path: ../user_repository
 
 dev_dependencies:
   flutter_lints: ^2.0.0
