--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   image_picker: ^1.0.5
   user_repository:
     path: packages/user_repository
+  reservation_repository:
+    path: packages/reservation_repository
 
 dev_dependencies:
   flutter_lints: ^2.0.0
